Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberTextObjField.quorum
class Main
    Text v
    v:SetValue(text)
    action Main
        Test(v)
    end

    action Test(number var)
    end
end
